vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Set decoded audio format. This only works in combination with<br>
     * libvlc_audio_set_callbacks().<br>
     * \param mp the media player<br>
     * \param setup callback to select the audio format (cannot be NULL)<br>
     * \param cleanup callback to release any allocated resources (or NULL)<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_audio_set_format_callbacks(libvlc_media_player_t*, libvlc_audio_setup_cb, libvlc_audio_cleanup_cb)</code><br>
     * <i>native declaration : line 2126</i>
     */
    public static native void libvlc_audio_set_format_callbacks(Pointer<LibvlcLibrary.libvlc_media_player_t > mp, Pointer<LibvlcLibrary.libvlc_audio_setup_cb > setup, Pointer<LibvlcLibrary.libvlc_audio_cleanup_cb > cleanup);
    /**
     * Set decoded audio format.<br>
     * This only works in combination with libvlc_audio_set_callbacks(),<br>
     * and is mutually exclusive with libvlc_audio_set_format_callbacks().<br>
     * \param mp the media player<br>
     * \param format a four-characters string identifying the sample format<br>
     *               (e.g. "S16N" or "FL32")<br>
     * \param rate sample rate (expressed in Hz)<br>
     * \param channels channels count<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_audio_set_format(libvlc_media_player_t*, const char*, unsigned, unsigned)</code><br>
     * <i>native declaration : line 2143</i>
     */
    public static native void libvlc_audio_set_format(Pointer<LibvlcLibrary.libvlc_media_player_t > mp, Pointer<Byte > format, int rate, int channels);
    /**
     * Get the current movie length (in ms).<br>
     * \param p_mi the Media Player<br>
     * \return the movie length (in ms), or -1 if there is no media.<br>
     * Original signature : <code>libvlc_time_t libvlc_media_player_get_length(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2154</i>
     */
    public static native long libvlc_media_player_get_length(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the current movie time (in ms).<br>
     * \param p_mi the Media Player<br>
     * \return the movie time (in ms), or -1 if there is no media.<br>
     * Original signature : <code>libvlc_time_t libvlc_media_player_get_time(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2162</i>
     */
    public static native long libvlc_media_player_get_time(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set the movie time (in ms). This has no effect if no media is being played.<br>
     * Not all formats and protocols support this.<br>
     * \param p_mi the Media Player<br>
     * \param i_time the movie time (in ms).<br>
     * Original signature : <code>void libvlc_media_player_set_time(libvlc_media_player_t*, libvlc_time_t)</code><br>
     * <i>native declaration : line 2171</i>
     */
    public static native void libvlc_media_player_set_time(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, long i_time);
    /**
     * Get movie position as percentage between 0.0 and 1.0.<br>
     * \param p_mi the Media Player<br>
     * \return movie position, or -1. in case of error<br>
     * Original signature : <code>float libvlc_media_player_get_position(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2179</i>
     */
    public static native float libvlc_media_player_get_position(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set movie position as percentage between 0.0 and 1.0. <br>
     * This has no effect if playback is not enabled.<br>
     * This might not work depending on the underlying input format and protocol.<br>
     * \param p_mi the Media Player<br>
     * \param f_pos the position<br>
     * Original signature : <code>void libvlc_media_player_set_position(libvlc_media_player_t*, float)</code><br>
     * <i>native declaration : line 2189</i>
     */
    public static native void libvlc_media_player_set_position(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, float f_pos);
    /**
     * Set movie chapter (if applicable).<br>
     * \param p_mi the Media Player<br>
     * \param i_chapter chapter number to play<br>
     * Original signature : <code>void libvlc_media_player_set_chapter(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2197</i>
     */
    public static native void libvlc_media_player_set_chapter(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_chapter);
    /**
     * Get movie chapter.<br>
     * \param p_mi the Media Player<br>
     * \return chapter number currently playing, or -1 if there is no media.<br>
     * Original signature : <code>int libvlc_media_player_get_chapter(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2205</i>
     */
    public static native int libvlc_media_player_get_chapter(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get movie chapter count<br>
     * \param p_mi the Media Player<br>
     * \return number of chapters in movie, or -1.<br>
     * Original signature : <code>int libvlc_media_player_get_chapter_count(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2213</i>
     */
    public static native int libvlc_media_player_get_chapter_count(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Is the player able to play<br>
     * \param p_mi the Media Player<br>
     * \return boolean<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_will_play(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2223</i>
     */
    public static native int libvlc_media_player_will_play(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get title chapter count<br>
     * \param p_mi the Media Player<br>
     * \param i_title title<br>
     * \return number of chapters in title, or -1<br>
     * Original signature : <code>int libvlc_media_player_get_chapter_count_for_title(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2232</i>
     */
    public static native int libvlc_media_player_get_chapter_count_for_title(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_title);
    /**
     * Set movie title<br>
     * \param p_mi the Media Player<br>
     * \param i_title title number to play<br>
     * Original signature : <code>void libvlc_media_player_set_title(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2241</i>
     */
    public static native void libvlc_media_player_set_title(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_title);
    /**
     * Get movie title<br>
     * \param p_mi the Media Player<br>
     * \return title number currently playing, or -1<br>
     * Original signature : <code>int libvlc_media_player_get_title(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2249</i>
     */
    public static native int libvlc_media_player_get_title(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get movie title count<br>
     * \param p_mi the Media Player<br>
     * \return title number count, or -1<br>
     * Original signature : <code>int libvlc_media_player_get_title_count(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2257</i>
     */
    public static native int libvlc_media_player_get_title_count(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set previous chapter (if applicable)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_previous_chapter(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2264</i>
     */
    public static native void libvlc_media_player_previous_chapter(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set next chapter (if applicable)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_next_chapter(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2271</i>
     */
    public static native void libvlc_media_player_next_chapter(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the requested movie play rate.<br>
     * @warning Depending on the underlying media, the requested rate may be<br>
     * different from the real playback rate.<br>
     * \param p_mi the Media Player<br>
     * \return movie play rate<br>
     * Original signature : <code>float libvlc_media_player_get_rate(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2281</i>
     */
    public static native float libvlc_media_player_get_rate(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set movie play rate<br>
     * \param p_mi the Media Player<br>
     * \param rate movie play rate to set<br>
     * \return -1 if an error was detected, 0 otherwise (but even then, it might<br>
     * not actually work depending on the underlying media protocol)<br>
     * Original signature : <code>int libvlc_media_player_set_rate(libvlc_media_player_t*, float)</code><br>
     * <i>native declaration : line 2291</i>
     */
    public static native int libvlc_media_player_set_rate(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, float rate);
    /**
     * Get current movie state<br>
     * \param p_mi the Media Player<br>
     * \return the current state of the media player (playing, paused, ...) \see libvlc_state_t<br>
     * Original signature : <code>libvlc_state_t libvlc_media_player_get_state(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2299</i>
     */
    public static native IntValuedEnum<LibvlcLibrary.libvlc_state_t > libvlc_media_player_get_state(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get movie fps rate<br>
     * \param p_mi the Media Player<br>
     * \return frames per second (fps) for this playing movie, or 0 if unspecified<br>
     * Original signature : <code>float libvlc_media_player_get_fps(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2307</i>
     */
    public static native float libvlc_media_player_get_fps(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * How many video outputs does this media player have?<br>
     * \param p_mi the media player<br>
     * \return the number of video outputs<br>
     * Original signature : <code>int libvlc_media_player_has_vout(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2317</i>
     */
    public static native int libvlc_media_player_has_vout(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Is this media player seekable?<br>
     * \param p_mi the media player<br>
     * \return true if the media player can seek<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_is_seekable(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2327</i>
     */
    public static native int libvlc_media_player_is_seekable(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Can this media player be paused?<br>
     * \param p_mi the media player<br>
     * \return true if the media player can pause<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_can_pause(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2337</i>
     */
    public static native int libvlc_media_player_can_pause(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
